<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_preference_category_title">

        <SwitchPreferenceCompat
            android:key="@string/total_days_key"
            android:title="@string/total_days_switch_title"
            android:summary="@string/total_days_switch_summary"/>

        <SwitchPreferenceCompat
            android:key="@string/status_bar_key"
            android:title="@string/notification_switch_title"
            android:summary="@string/notification_switch_summary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_preference_category_title">

        <Preference
            android:selectable="false"
            android:summary="@string/settings_preference_about_text" />

        <Preference
            android:key="version"
            android:title="@string/settings_preference_version_title" />
    </PreferenceCategory>

</PreferenceScreen>
